--- a/css/main.css
+++ b/css/main.css
@@ -1,52 +1,6 @@
 body {
   font-family: "Dosis", sans-serif; }
 
-/* Home Page Style 
-.ww-home-page {
-  background: url("../images/home-img.jpg") no-repeat center center;
-  background-size: cover;
-  background-position: 70%;
-  height: 100vh;
-  min-height: 480px;
-  max-height: 1080px; }
-  .ww-home-page .ww-wedding-announcement {
-    width: 100%;
-    max-width: 1600px;
-    margin: 0 auto;
-    height: 100%;
-    color: #fff;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
-    letter-spacing: 2px; }
-    .ww-home-page .ww-wedding-announcement .ww-announcement-container {
-      max-width: 600px;
-      text-align: center;
-      margin-left: 0;
-      z-index: 999; }
-    .ww-home-page .ww-wedding-announcement img {
-      max-height: 350px;
-      width: auto; }
-      @media (max-width: 480px) {
-        .ww-home-page .ww-wedding-announcement img {
-          max-height: 250px;
-          width: auto; } }
-    .ww-home-page .ww-wedding-announcement .ww-couple-name {
-      font-size: 70px; }
-      @media (max-width: 576px) {
-        .ww-home-page .ww-wedding-announcement .ww-couple-name {
-          font-size: 50px; } }
-
-.ww-home-page:before {
-  content: "";
-  background-color: rgba(245, 138, 119, 0.2);
-  width: 100%;
-  height: 100%;
-  height: 100vh;
-  min-height: 480px;
-  max-height: 1080px;
-  position: absolute;
-  left: 0;
-  top: 0; }
-*/
 /* Nav Bar Style */
 .ww-nav-bar .heart {
   fill: #f26147;
@@ -120,7 +74,7 @@ body {
     -moz-column-count: 1;
          column-count: 1; } }
 
-/* RSVP Style */
+/* RSVP Style 
 .ww-rsvp-detail {
   background: url("../images/rsvp-img.jpg") no-repeat center center;
   background-size: cover;
@@ -160,7 +114,7 @@ body {
   position: absolute;
   left: 0;
   top: 0; }
-
+*/
 /* Footer Style */
 .ww-footer a.credit {
   color: inherit;
@@ -180,3 +134,128 @@ body {
 
 .btn-outline-primary:hover {
   color: #fff; }
+
+ /* The actual timeline (the vertical ruler) */
+ .timeline {
+  position: relative;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+/* The actual timeline (the vertical ruler) */
+.timeline::after {
+  content: '';
+  position: absolute;
+  width: 6px;
+  background-color: white;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-left: -3px;
+}
+
+/* Container around content */
+.container-tl {
+  padding: 10px 40px;
+  position: relative;
+  background-color: inherit;
+  width: 50%;
+}
+
+/* The circles on the timeline */
+.container-tl::after {
+  content: '';
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  right: -13px;
+  background-color: white;
+  border: 4px solid #f89c9c;
+  top: 15px;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+/* Place the container to the left */
+.left {
+  left: 0;
+}
+
+/* Place the container to the right */
+.right {
+  left: 50%;
+}
+
+/* Add arrows to the left container (pointing right) */
+.left::before {
+  content: " ";
+  height: 0;
+  position: absolute;
+  top: 22px;
+  width: 0;
+  z-index: 1;
+  right: 30px;
+  border: medium solid white;
+  border-width: 10px 0 10px 10px;
+  border-color: transparent transparent transparent white;
+}
+
+/* Add arrows to the right container (pointing left) */
+.right::before {
+  content: " ";
+  height: 0;
+  position: absolute;
+  top: 22px;
+  width: 0;
+  z-index: 1;
+  left: 30px;
+  border: medium solid white;
+  border-width: 10px 10px 10px 0;
+  border-color: transparent white transparent transparent;
+}
+
+/* Fix the circle for containers on the right side */
+.right::after {
+  left: -13px;
+}
+
+/* The actual content */
+.content {
+  padding: 20px 30px;
+  background-color: white;
+  position: relative;
+  border-radius: 6px;
+}
+
+/* Media queries - Responsive timeline on screens less than 600px wide */
+@media screen and (max-width: 600px) {
+  /* Place the timelime to the left */
+  .timeline::after {
+  left: 31px;
+  }
+  
+  /* Full-width containers */
+  .container-full {
+  width: 100%;
+  padding-left: 70px;
+  padding-right: 25px;
+  }
+  
+  /* Make sure that all arrows are pointing leftwards */
+  .container::before {
+  left: 60px;
+  border: medium solid white;
+  border-width: 10px 10px 10px 0;
+  border-color: transparent white transparent transparent;
+  }
+
+  /* Make sure all circles are at the same spot */
+  .left::after, .right::after {
+  left: 15px;
+  }
+  
+  /* Make all right containers behave like the left ones */
+  .right {
+  left: 0%;
+  }
+}
