--- a/css/main.css
+++ b/css/main.css
@@ -170,7 +170,7 @@ body {
   height: 25px;
   right: -13px;
   background-color: white;
-  border: 4px solid #f7ebeb; /* #f89c9c;*/
+  border: 4px solid #f89c9c;
   top: 15px;
   border-radius: 50%;
   z-index: 1;
@@ -222,7 +222,7 @@ body {
 /* The actual content */
 .content {
   padding: 20px 30px;
-  background-color: #f7ebeb;
+  background-color: #fad5d5;
   position: relative;
   border-radius: 6px;
 }
