--- a/css/main.css
+++ b/css/main.css
@@ -222,7 +222,7 @@ body {
 /* The actual content */
 .content {
   padding: 20px 30px;
-  background-color: #fad5d5;
+  background-color: #fbe9e9;
   position: relative;
   border-radius: 6px;
 }
