--- a/css/main.css
+++ b/css/main.css
@@ -74,47 +74,6 @@ body {
     -moz-column-count: 1;
          column-count: 1; } }
 
-/* RSVP Style 
-.ww-rsvp-detail {
-  background: url("../images/rsvp-img.jpg") no-repeat center center;
-  background-size: cover;
-  min-height: 500px;
-  position: relative; }
-  .ww-rsvp-detail .ww-rsvp-form {
-    padding-left: 20%; }
-    @media (max-width: 768px) {
-      .ww-rsvp-detail .ww-rsvp-form {
-        padding-left: 10%; } }
-    @media (max-width: 576px) {
-      .ww-rsvp-detail .ww-rsvp-form {
-        padding-left: 0%; } }
-    .ww-rsvp-detail .ww-rsvp-form .form-control {
-      background-color: rgba(222, 222, 222, 0.2);
-      color: #fff;
-      border: 1px solid rgba(255, 255, 255, 0.6); }
-    .ww-rsvp-detail .ww-rsvp-form .form-control::-moz-placeholder {
-      color: #dedede; }
-    .ww-rsvp-detail .ww-rsvp-form .form-control:-ms-input-placeholder {
-      color: #dedede; }
-    .ww-rsvp-detail .ww-rsvp-form .form-control::placeholder {
-      color: #dedede; }
-    .ww-rsvp-detail .ww-rsvp-form select.form-control option {
-      background: rgba(0, 0, 0, 0.3);
-      color: #fff; }
-    .ww-rsvp-detail .ww-rsvp-form .btn-submit {
-      background-color: rgba(245, 138, 119, 0.8);
-      padding: 0.45rem 1.5rem;
-      border: 0; }
-
-.ww-rsvp-detail:before {
-  content: "";
-  background-color: rgba(0, 0, 0, 0.3);
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 0;
-  top: 0; }
-*/
 /* Footer Style */
 .ww-footer a.credit {
   color: inherit;
@@ -151,7 +110,7 @@ body {
   top: 0;
   bottom: 0;
   left: 50%;
-  margin-left: -6px;
+  margin-left: -6px; /* -3 */
 } 
 
 /* Container around content */
@@ -178,7 +137,7 @@ body {
 
 /* Place the container to the left */
 .left {
-  left: 0;
+  left: 0%;
 }
 
 /* Place the container to the right */
